fix(components): Fixed TimelineSubitems icons not wrapping

--- a/components/work-timeline/timeline-subitem/timeline-subitem.scss
+++ b/components/work-timeline/timeline-subitem/timeline-subitem.scss
@@ -45,6 +45,7 @@
 
 	.icons {
 		display: flex;
+		flex-wrap: wrap;
 		gap: get-spacing-value(spacing-8);
 	}
 }
